CHANGELOG

2015-06-03 3.5.0
    * fix: send a descriptive timeout error when it occurs
    * chore: add headers debugging
    * fix: incremental wait waitTask
      will now wait 100ms * loopTickNumber * loopTickNumber
      fixes #102
    * fix: do not use global when we know we will be in a browser
      browserify `global` is not always `window` can be <div id="global"></div>
      fixes #99
    * feat: new browse()/browseFrom()/browseAll()
      - `browse(query, queryParameters)` now has the same signature than
      search(). You can use any `query` and `queryParameters`.
      - `browseFrom(cursor)` can be used as an efficient way to
      continue (next page) a previous `browse()` call. All browse responses now have a `cursor` property.
      - `browseAll(query, queryParameters)` can be used to get all
      the content of your index
        It returns an [EventEmitter](https://nodejs.org/api/events.html).

        Available events:
          - `result`
          - `end`
          - `error` (you should listen to it or it will throw)

        There's also `stop()` method on the event emitter so that you can
        stop browsing at any point.

      fixes #101
    * fix: support typeahead 0.11
      fixes #105

2015-05-23 3.4.0
    * FIX: Remove debugging messages from builds
      fixes #91
      fixes #86
    * FIX: Handle badly formatted JSON
      fixes #89
      fixes #90
    * FIX: Stop bytes sent/received debug on node 0.12 when socket closes
    * test: Test on only 3 browsers in travis
      fixes #61
    * test: split desktop/mobile into a travis matrix, reduces travis timeouts
    * feat: add client.batch()
    * feature: getObjects now accepts attributesToRetrieve:
      signature: getObjects(objectIDs, attributesToRetrieve, callback)
    * fix: send `x-algolia-agent` instead of `x-user-agent`
    * fix: clone cached results hits sent
      fixes #79
    * feat: New parameters for API keys
      Added description, referers, queryParameters